# Little-Boy

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  options.cmake
external_licenses/: json  raylib  sm83  tinyfiledialogs
include/: cpu.hpp  memory.hpp
include/cartridge_impls/: cartridge.hpp  cartridge_factory.hpp
include/core/: ICartridge.hpp  bus.hpp  cartridge.hpp  core_constants.hpp  core_utils.hpp  cpu.hpp  cycles.hpp  emulator.hpp  fetcher.hpp  fifo.hpp  general_constants.hpp  instruction_cycles.hpp  logging.hpp  memory.hpp  ppu.hpp  ppu_types.hpp  timer.hpp
include/raylib/: Cartridge.hpp  cartridge.hpp  raylib_handle_joypad.hpp  raylib_parts.hpp  raylib_ppu.hpp
include/rom_cartridge/: cartridge.hpp  mbc.hpp
src/: cpu.cpp  decode.cpp  main.cpp  memory.cpp
src/cartridge_impls/: CMakeLists.txt  cartridge.cpp  cartridge_factory.cpp  mbc1.cpp  mbc2.cpp  mbc3.cpp  nombc.cpp
src/core/: CMakeLists.txt  cartridge.cpp  cpu.cpp  cpu_decode.cpp  cpu_execute.cpp  decode.cpp  emulator.cpp  fetcher.cpp  memory.cpp  microcode.cpp  ppu.cpp  timer.cpp
src/raylib/: CMakeLists.txt  Cartridge.cpp  cartridge.cpp  main.cpp  raylib_parts.cpp  raylib_ppu.cpp
src/rom_cartridge/: CMakeLists.txt
src/std_logging/: CMakeLists.txt  logging.cpp
test/: CMakeLists.txt  cycles.hpp  desktop_logging.cpp  dummy_types.hpp  ppu_helper.cpp  ppu_helper.hpp
test/core/: CMakeLists.txt  test_cpu.cpp  test_cpu_timings.cpp  test_opcodes.cpp  test_ppu.cpp
test/raylib/: CMakeLists.txt  itest_main.cpp
